--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -4,22 +4,6 @@
               android:layout_height="fill_parent"
               android:orientation="horizontal"
               android:baselineAligned="false"
-              tools:context=".MainActivity"
->
-
-    <fragment
-            android:id="@+id/left_fragment"
-            android:name="com.example.bin.weatherapp.fragmentDemo"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-    />
-
-    <FrameLayout
-            android:id="@+id/right_fragment"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="3"
-    />
+              tools:context=".MainActivity">
 
 </LinearLayout>
