--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,9 @@
              android:layout_height="fill_parent"
              android:id="@+id/fragment_container"
              tools:context=".MainActivity">
+    <com.ant.liao.GifView
+            android:id="@+id/gif1"
+            android:layout_height="wrap_content" android:layout_width="wrap_content"
+            android:paddingRight="14px" android:enabled="false" />
 
 </FrameLayout>
