--- a/app/src/main/res/layout/weather_list_fragment.xml
+++ b/app/src/main/res/layout/weather_list_fragment.xml
@@ -10,7 +10,6 @@
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="387dp"
-            android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scrollbars="horizontal" android:id="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/temperature_textView"
-                android:text="16"
+                android:text="0"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="4dp"
                 android:textSize="55sp" android:layout_marginBottom="2dp"
@@ -45,7 +44,7 @@
                 android:layout_marginBottom="188dp"
                 android:textSize="24sp"/>
         <TextView
-                android:text="晴"
+                android:text="暴雨"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/skyCon_textView"
