--- a/app/src/main/res/layout/single_forecast.xml
+++ b/app/src/main/res/layout/single_forecast.xml
@@ -7,8 +7,8 @@
 
     <TextView
             android:id="@+id/skyConPic_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
     />
     <TextView
             android:text="Tomorrow"
