--- a/app/src/main/res/layout/weather_list_fragment.xml
+++ b/app/src/main/res/layout/weather_list_fragment.xml
@@ -33,7 +33,8 @@
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="4dp"
                 android:textSize="55sp" android:layout_marginBottom="2dp"
-                app:layout_constraintBottom_toTopOf="@+id/location_textView"/>
+                app:layout_constraintBottom_toTopOf="@+id/location_textView"
+        />
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -53,6 +54,16 @@
                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                 app:layout_constraintHorizontal_bias="0.0" android:textSize="24sp"
                 app:layout_constraintTop_toBottomOf="@+id/location_textView"/>
+        <TextView
+                android:text=""
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/skyCon_frag"
+                app:layout_constraintStart_toStartOf="@+id/location_textView"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.86"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="28dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
