--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -6,4 +6,18 @@
               android:baselineAligned="false"
               tools:context=".MainActivity">
 
+    <FrameLayout
+            android:layout_width="400dp"
+            android:layout_height="match_parent"
+            android:id="@+id/fragment_container"
+    >
+
+    </FrameLayout>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/forecast_fragment_container"
+    >
+
+    </FrameLayout>
 </LinearLayout>
