--- a/app/src/main/res/layout/weather_list_fragment.xml
+++ b/app/src/main/res/layout/weather_list_fragment.xml
@@ -9,16 +9,16 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="387dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scrollbars="horizontal" android:id="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="2dp" android:layout_marginTop="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="299dp"
+            android:layout_height="0dp"
             android:id="@+id/constraintLayout" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
