调正平板的版面 修复平板的分享功能

--- a/app/src/main/res/layout-large/weather_list_fragment.xml
+++ b/app/src/main/res/layout-large/weather_list_fragment.xml
@@ -8,8 +8,8 @@
 >
 
     <android.support.v7.widget.RecyclerView
-            android:layout_width="410dp"
-            android:layout_height="697dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scrollbars="horizontal" android:id="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="parent"
